tests/baselines/reference/unusedImports10.errors.txt
unusedImports10.ts(9,12): error TS6133: 'a' is declared but its value is never read.


==== unusedImports10.ts (1 errors) ====
    module A {
        export class Calculator {
            public handelChar() {
            }
        }
    }
    
    module B {
        import a = A;
               ~
!!! error TS6133: 'a' is declared but its value is never read.
    }